@@ -1,5 +1,6 @@
 Version 2.02.11 - 
 =====================================
+  Add clvmd function to return the cluster name. not used by LVM yet.
   Add cling allocation policy.
   Change _check_contiguous() to use _for_each_pv().
   Extend _for_each_pv() to allow termination without error.
